xfpanel-switch 1.0.5 (UNRELEASED)

    * General
      - Add gi.require_version('Gtk', '3.0') to silence warning
      - Add appdata file and install (LP: #1554273)
      - Add .bzrignore
    * Bugs Fixed
      - Added error handling for failed backup file parsing
      - Update categories to display in Xfce Settings Manager (LP: #1734516)
      - Improve restoration of saved templates (LP: #1575996)
      - Move supported save and load commandline parameters to the main
        binary (LP: #1556737)
      - Backup current configuration at startup so it can be rolled
        back (LP: #1555265)
    * Updated translations: French, Galician, Brazilian Portuguese, Kazakh,
      Polish, Slovenian, Czech, Italian

xfpanel-switch 1.0.4

    * New translations: Dutch, Greek, Japanese, Portuguese
    * Updated translations: French, Lithuanian, Spanish, Swedish

xfpanel-switch 1.0.3

    * Bugs Fixed
      - Allow translation of missing messages (LP: #1497762)
      - Correctly sort modification dates
      - Set the save dialog parent to fix a runtime warning
      - Add link to documentation when clicking Help
    * New translations: Finnish, Spanish
    * Updated translations: German, French

xfpanel-switch 1.0.2

    * Bugs Fixed
      - Wrong shebang in xfpanel-switch/xfpanel-switch.py (LP: #1494843)
      - Check if user can delete backup (LP: #1494846)
      - Do not list saved configurations multiple times
    * New Translation: French

xfpanel-switch 1.0.1

    * New Features
      - Ths new release ships with it's first set of templates.
        The templates include GNOME 2, Redmond, Xfce 4.12,
        Xubuntu Classic (12.04) and Xubuntu Modern (14.04+)
      - The first round of translations have now landed. We now
        have full support for German, Lithuanian, Serbian, and
        Swedish. Partial Russian support is also included.
    * Bugs Fixed
      - Terminate xfce-panel by dbus instead of kill (LP: #1489551)