@@ -10,7 +10,7 @@
 /panels/panel-0/length-adjust true
 /panels/panel-0/mode uint32 0
 /panels/panel-0/nrows uint32 1
-/panels/panel-0/plugin-ids [<1>, <2>, <3>, <4>, <5>, <6>, <7>, <8>]
+/panels/panel-0/plugin-ids [<1>, <2>, <3>, <4>, <5>, <6>, <7>, <8>, <9>, <10>, <11>]
 /panels/panel-0/position 'p=6;x=0;y=0'
 /panels/panel-0/position-locked true
 /panels/panel-0/size uint32 24
@@ -41,25 +41,36 @@
 /plugins/plugin-3/expand true
 /plugins/plugin-3/style uint32 0
 /plugins/plugin-4 'systray'
-/plugins/plugin-4/items [<'14418443291.desktop'>]
 /plugins/plugin-4/show-frame false
 /plugins/plugin-4/size-max uint32 22
-/plugins/plugin-5 'power-manager-plugin'
-/plugins/plugin-5/items [<'14418443522.desktop'>]
+/plugins/plugin-5 'notification-plugin'
 /plugins/plugin-6 'indicator'
 /plugins/plugin-6/align-left false
-/plugins/plugin-6/items [<'14418443623.desktop'>]
 /plugins/plugin-6/mode-whitelist false
 /plugins/plugin-6/single-row false
 /plugins/plugin-6/style uint32 0
-/plugins/plugin-7 'separator'
-/plugins/plugin-7/digital-format '%a, %d %b %H:%M'
-/plugins/plugin-7/expand false
-/plugins/plugin-7/style uint32 0
-/plugins/plugin-8 'clock'
-/plugins/plugin-8/digital-format '%d %b, %H:%M'
-/plugins/plugin-8/mode uint32 2
-/plugins/plugin-8/show-frame true
-/plugins/plugin-8/size-max uint32 22
-/plugins/plugin-8/style uint32 0
-/plugins/plugin-8/tooltip-format '%A %d %B %Y'
+/plugins/plugin-7 'statusnotifier'
+/plugins/plugin-7/icon-size uint32 22
+/plugins/plugin-7/menu-is-primary true
+/plugins/plugin-7/mode-whitelist false
+/plugins/plugin-7/single-row false
+/plugins/plugin-7/square-icons false
+/plugins/plugin-7/symbolic-icons true
+/plugins/plugin-8 'power-manager-plugin'
+/plugins/plugin-9 'pulseaudio'
+/plugins/plugin-9/enable-keyboard-shortcuts true
+/plugins/plugin-9/enable-mpris true
+/plugins/plugin-9/enable-wnck true
+/plugins/plugin-9/mixer-command 'pavucontrol'
+/plugins/plugin-9/mpris-players 'parole;'
+/plugins/plugin-9/show-notifications true
+/plugins/plugin-10 'separator'
+/plugins/plugin-10/expand false
+/plugins/plugin-10/style uint32 0
+/plugins/plugin-11 'clock'
+/plugins/plugin-11/digital-format '%d %b, %H:%M'
+/plugins/plugin-11/mode uint32 2
+/plugins/plugin-11/show-frame true
+/plugins/plugin-11/size-max uint32 22
+/plugins/plugin-11/style uint32 0
+/plugins/plugin-11/tooltip-format '%A %d %B %Y'
