@@ -1,13 +1,0 @@
-[Desktop Entry]
-Version=1.0
-Type=Application
-Exec=exo-open --launch MailReader %u
-Icon=internet-mail
-StartupNotify=false
-Terminal=false
-Categories=Network;X-XFCE;X-Xfce-Toplevel;
-OnlyShowIn=XFCE;
-X-XFCE-MimeType=x-scheme-handler/mailto;
-Name=Mail Reader
-Comment=Read your email
-X-XFCE-Source=file:///usr/share/applications/exo-mail-reader.desktop
