@@ -1,12 +1,0 @@
-[Desktop Entry]
-Version=1.0
-Type=Application
-Exec=exo-open --launch TerminalEmulator
-Icon=utilities-terminal
-StartupNotify=false
-Terminal=false
-Categories=Utility;X-XFCE;X-Xfce-Toplevel;
-OnlyShowIn=XFCE;
-Name=Terminal Emulator
-Comment=Use the command line
-X-XFCE-Source=file:///usr/share/applications/exo-terminal-emulator.desktop
