@@ -1,11 +1,0 @@
-[Desktop Entry]
-Name=Settings Manager
-Comment=Graphical Settings Manager for Xfce 4
-Exec=xfce4-settings-manager
-Icon=preferences-desktop
-Terminal=false
-Type=Application
-Categories=X-XFCE;Settings;DesktopSettings;
-OnlyShowIn=XFCE;
-X-XfceSettingsManagerHidden=true
-X-XFCE-Source=file:///usr/share/applications/xfce-settings-manager.desktop
