@@ -1,11 +1,0 @@
-[Desktop Entry]
-Version=1.0
-Name=Application Finder
-Comment=Find and launch applications installed on your system
-Exec=xfce4-appfinder
-Icon=xfce4-appfinder
-StartupNotify=true
-Terminal=false
-Type=Application
-Categories=X-XFCE;Utility;
-X-XFCE-Source=file:///usr/share/applications/xfce4-appfinder.desktop
