@@ -1,14 +1,0 @@
-[Desktop Entry]
-Name=Ubuntu Software Center
-GenericName=Software Center
-Comment=Lets you choose from thousands of applications available for Ubuntu
-Exec=/usr/bin/software-center %u
-Icon=softwarecenter
-Terminal=false
-Type=Application
-Categories=PackageManager;GTK;System;Settings;
-MimeType=application/x-deb;application/x-debian-package;x-scheme-handler/apt;
-StartupNotify=true
-X-Ubuntu-Gettext-Domain=software-center
-Keywords=Sources;PPA;Install;Uninstall;Remove;Purchase;Catalogue;Store;
-X-XFCE-Source=file:///usr/share/applications/ubuntu-software-center.desktop
