@@ -1,20 +1,0 @@
-[Desktop Entry]
-Version=1.0
-Type=Application
-Name=GIMP Image Editor
-GenericName=Image Editor
-Comment=Create images and edit photographs
-Exec=gimp-2.6 %U
-TryExec=gimp-2.6
-Icon=gimp
-Terminal=false
-Categories=Graphics;2DGraphics;RasterGraphics;GTK;
-X-GNOME-Bugzilla-Bugzilla=GNOME
-X-GNOME-Bugzilla-Product=GIMP
-X-GNOME-Bugzilla-Component=General
-X-GNOME-Bugzilla-Version=2.6.12
-X-GNOME-Bugzilla-OtherBinaries=gimp-2.6
-StartupNotify=true
-MimeType=application/postscript;application/pdf;image/bmp;image/g3fax;image/gif;image/x-fits;image/pcx;image/x-portable-anymap;image/x-portable-bitmap;image/x-portable-graymap;image/x-portable-pixmap;image/x-psd;image/x-sgi;image/x-tga;image/x-xbitmap;image/x-xwindowdump;image/x-xcf;image/x-compressed-xcf;image/tiff;image/jpeg;image/x-psp;image/png;image/x-icon;image/x-xpixmap;image/svg+xml;image/x-wmf;
-X-Ubuntu-Gettext-Domain=gimp20
-X-XFCE-Source=file:///usr/share/applications/gimp.desktop
